update with x repo

--- a/pacman.conf
+++ b/pacman.conf
@@ -75,11 +75,12 @@ LocalFileSigLevel = Optional
 #[core-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-# XOs custom repository (takes priority over Arch repos)
-[xos]
+# X repo
+[x]
 SigLevel = Optional TrustAll
-Server = https://github.com/xscriptordev/xos-repo/releases/download/latest/$arch
+Server = https://xscriptor.github.io/x-repo/repo/x86_64
 
+# Arch repos
 [core]
 Include = /etc/pacman.d/mirrorlist
 
