--- a/airootfs/root/user_configuration.json
+++ b/airootfs/root/user_configuration.json
@@ -18,7 +18,14 @@
         "sys_lang": "en_US.UTF-8"
     },
     "mirror_config": {
-        "custom_repositories": [],
+        "custom_repositories": [
+            {
+                "name": "x",
+                "url": "https://xscriptor.github.io/x-repo/repo/x86_64",
+                "sign_check": "Optional",
+                "sign_option": "TrustAll"
+            }
+        ],
         "custom_servers": [],
         "mirror_regions": {
             "Spain": [
@@ -38,7 +45,13 @@
         "type": "nm"
     },
     "ntp": true,
-    "packages": [],
+    "packages": [
+        "x-release",
+        "git",
+        "base-devel",
+        "wget",
+        "curl"
+    ],
     "parallel_downloads": 0,
     "profile_config": {
         "gfx_driver": "All open-source",
