--- a/efiboot/loader/entries/02-archiso-speech-linux.conf
+++ b/efiboot/loader/entries/02-archiso-speech-linux.conf
@@ -1,4 +1,4 @@
-title    XOs Linux install medium (%ARCH%, UEFI) with speech
+title    x Linux install medium (%ARCH%, UEFI) with speech
 sort-key 02
 linux    /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
 initrd   /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
