--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -18,12 +18,12 @@ fi
 set linux_path=/%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
 set initrd_path=/%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 
-menuentry 'XOs Linux install medium (%ARCH%, UEFI)' {
+menuentry 'x Linux install medium (%ARCH%, UEFI)' {
   linux ${linux_path} archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% script=/root/x-autostart.sh
   initrd ${initrd_path}
 }
 
-menuentry 'XOs Linux install medium (%ARCH%, UEFI) with speech' {
+menuentry 'x Linux install medium (%ARCH%, UEFI) with speech' {
   linux ${linux_path} archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on script=/root/x-autostart.sh
   initrd ${initrd_path}
 }
