--- a/grub/loopback.cfg
+++ b/grub/loopback.cfg
@@ -1,34 +1,34 @@
 # https://www.supergrubdisk.org/wiki/Loopback.cfg
 
 # Search for the ISO volume
-search --no-floppy --set=xos_img_dev --file "${iso_path}"
-probe --set xos_img_dev_uuid --fs-uuid "${xos_img_dev}"
+search --no-floppy --set=x_img_dev --file "${iso_path}"
+probe --set x_img_dev_uuid --fs-uuid "${x_img_dev}"
 
 # Get a human readable platform identifier
 if [ "${grub_platform}" == 'efi' ]; then
-    xos_platform='UEFI'
+    x_platform='UEFI'
 elif [ "${grub_platform}" == 'pc' ]; then
-    xos_platform='BIOS'
+    x_platform='BIOS'
 else
-    xos_platform="${grub_cpu}-${grub_platform}"
+    x_platform="${grub_cpu}-${grub_platform}"
 fi
 
 # Set default menu entry
-default=XOs
+default=x
 timeout=10
 timeout_style=menu
 
 # Menu entries
 
-menuentry "XOs Linux install medium (%ARCH%, ${xos_platform})" --class xos --class gnu-linux --class gnu --class os --id 'xos' {
+menuentry "x Linux install medium (%ARCH%, ${x_platform})" --class x --class gnu-linux --class gnu --class os --id 'x' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${xos_img_dev_uuid} img_loop="${iso_path}"
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${x_img_dev_uuid} img_loop="${iso_path}"
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
-menuentry "XOs Linux install medium with speakup screen reader (%ARCH%, ${xos_platform})" --hotkey s --class xos --class gnu-linux --class gnu --class os --id 'xos-accessibility' {
+menuentry "x Linux install medium with speakup screen reader (%ARCH%, ${x_platform})" --hotkey s --class x --class gnu-linux --class gnu --class os --id 'x-accessibility' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${xos_img_dev_uuid} img_loop="${iso_path}" accessibility=on
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${x_img_dev_uuid} img_loop="${iso_path}" accessibility=on
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
