--- a/syslinux/archiso_pxe-linux.cfg
+++ b/syslinux/archiso_pxe-linux.cfg
@@ -1,9 +1,9 @@
-LABEL xos_nbd
+LABEL x_nbd
 TEXT HELP
-Boot the XOs Linux install medium using NBD.
-It allows you to install XOs Linux or perform system maintenance.
+Boot the x Linux install medium using NBD.
+It allows you to install x Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL XOs Linux install medium (%ARCH%, NBD)
+MENU LABEL x Linux install medium (%ARCH%, NBD)
 LINUX ::/%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
 INITRD ::/%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% archiso_nbd_srv=${pxeserver} cms_verify=y
@@ -11,10 +11,10 @@ SYSAPPEND 3
 
 LABEL arch_nfs
 TEXT HELP
-Boot the XOs Linux live medium using NFS.
-It allows you to install XOs Linux or perform system maintenance.
+Boot the x Linux live medium using NFS.
+It allows you to install x Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL XOs Linux install medium (%ARCH%, NFS)
+MENU LABEL x Linux install medium (%ARCH%, NFS)
 LINUX ::/%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
 INITRD ::/%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archiso_nfs_srv=${pxeserver}:/run/archiso/bootmnt cms_verify=y
@@ -22,10 +22,10 @@ SYSAPPEND 3
 
 LABEL arch_http
 TEXT HELP
-Boot the XOs Linux live medium using HTTP.
-It allows you to install XOs Linux or perform system maintenance.
+Boot the x Linux live medium using HTTP.
+It allows you to install x Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL XOs Linux Install medium (%ARCH%, HTTP)
+MENU LABEL x Linux Install medium (%ARCH%, HTTP)
 LINUX ::/%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
 INITRD ::/%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archiso_http_srv=http://${pxeserver}/ cms_verify=y
