--- a/syslinux/archiso_sys-linux.cfg
+++ b/syslinux/archiso_sys-linux.cfg
@@ -1,9 +1,9 @@
 LABEL arch
 TEXT HELP
-Boot the XOs Linux install medium on BIOS.
-It allows you to install XOs Linux or perform system maintenance.
+Boot the x Linux install medium on BIOS.
+It allows you to install x Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL XOs Linux install medium (%ARCH%, BIOS)
+MENU LABEL x Linux install medium (%ARCH%, BIOS)
 LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% script=/root/x-autostart.sh
@@ -11,10 +11,10 @@ APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% script=/roo
 # Accessibility boot option
 LABEL archspeech
 TEXT HELP
-Boot the XOs Linux install medium on BIOS with speakup screen reader.
-It allows you to install XOs Linux or perform system maintenance with speech feedback.
+Boot the x Linux install medium on BIOS with speakup screen reader.
+It allows you to install x Linux or perform system maintenance with speech feedback.
 ENDTEXT
-MENU LABEL XOs Linux install medium (%ARCH%, BIOS) with ^speech
+MENU LABEL x Linux install medium (%ARCH%, BIOS) with ^speech
 LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on script=/root/x-autostart.sh
